# KESNEWS

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  install_launchd.command  new_rules_news_clip.md  pyproject.toml  setup_kesco_briefing.command  start_kesco_briefing.command
backend/app/: main.py
config/: analysis_markdown.yaml  automated_collection.json.example  briefing_style_guide.md  classification_rules.example.yaml  collection_settings.json  editorial_policy.example.yaml  kesco_jurisdiction.json  people.example.yaml  search_rules.example.yaml  sources.example.yaml  trusted_media.yaml  weather_regions.json
docs/: API_DATA_CONTRACTS.md  ARCHITECTURE.md  CODEX_NEXT_TASK.md  KNOWN_RISKS.md  MANUAL_REGRESSION_CHECKLIST.md  OPERATIONS_RUNBOOK.md  PARALLEL_OPERATION_CHECKLIST.md  REFACTORING_MAP.md  WEATHER_RISK_BRIEFING_DESIGN.md
docs/regression/: AI_ARTICLE_BODY_SUMMARY_2026-07-22.md  AI_ARTICLE_SELECTION_2026-07-17.md  AI_SELECTION_P0_2026-07-17.md  AI_SELECTION_QUALITY_2026-07-17.md  CEO_REPORT_LAYOUT_2026-07-22.md  EXTERNAL_AI_SHORTCUTS_2026-07-22.md  GEMMA_MANAGEMENT_MESSAGE_V4_2026-07-17.md  GOVERNMENT_PRESS_RELEASES_2026-07-22.md  IT_SEARCH_EXPANSION_2026-07-24.md  KESCO_AI_JURISDICTION_2026-07-21.md  MANUAL_ARTICLE_BODY_2026-07-23.md  NEWS_COLLECTION_STAGE2_2026-07-16.md  (+8 more)
frontend/: index.html
legacy/: kesco_media_briefing_original.html
scripts/: backup_database.py  install_launchd.py  restart_server.py  restore_database.py  run_automated_collection.py  run_automated_weather.py  run_server.py
tests/: conftest.py  test_health.py
(+219 files in other folders)
