[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kesco-media-briefing"
version = "0.1.0"
description = "KESCO CEO 일일 언론브리핑 로컬 웹앱 백엔드"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "playwright>=1.61",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
